fix the spacing on the label

--- a/src/styles/components/ItemSkill.sass
+++ b/src/styles/components/ItemSkill.sass
@@ -8,8 +8,8 @@
   color: white
 
   .label
-    margin-left: $space-small
     margin-right: auto
+    padding: 0 $space-small
     line-height: 18px
 
   .square
